fix alignements

--- a/src/app/guide/guide-home/guide-home.component.scss
+++ b/src/app/guide/guide-home/guide-home.component.scss
@@ -59,3 +59,18 @@ mat-list-item {
 .imageShadow:hover {
   visibility: visible;
 }
+.profileName {
+  position: relative !important;
+  flex: 1 1 auto !important;
+  text-align: center !important;
+  height: 0px !important;
+  font-size: 16px !important;
+  font-weight: 500 !important;
+}
+.upHeader {
+  position: relative !important;
+  bottom: -30px !important;
+  text-align: center !important;
+  max-height: 10px !important;
+  height: 80px !important;
+}
